<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to Scavenger Hunt</string>
    <string name="app_name">Scavenger Hunt</string>
    <string name="app_version">0.1</string>
    <string name="parse_app_id">TNm1pK7cw56kNSTRzCd07tARh1xWc2OM6lNUKzOB</string>
    <string name="parse_client_id">MIij3qFTMsxMRMapTsWyypXlSgaf1envE6vKuPHW</string>

    <!-- Generic -->
    <string name="label_cancel">Cancel</string>
    <string name="label_continue">Continue</string>

    <!-- Menu Options -->
    <string name="option_menu_about">About</string>
    <string name="option_menu_prefs">Preferences</string>
    <string name="option_menu_refresh">Refresh</string>
    <string name="option_menu_logout">Log out</string>
    <string name="title_activity_my_games_list">Created Games</string>

    <!-- Login Screen -->
    <string name="label_enterUsernamePasswordEmail">Enter your username, password and email</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Enter username</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Enter your email</string>
    <string name="label_login_in_progress">Login in progress&#8230;</string>
    <string name="label_signup_in_progress">Sign up in progress for new user</string>
    <string name="label_login_please_wait">Please wait&#8230;</string>
    <string name="label_query_in_progress">Searching for user</string>
    <string name="label_queryErrorMessage">User query error.</string>
    <string name="label_signupErrorMessage">User signup error.</string>
    <string name="label_loginErrorMessage">Login error:  </string>
    <string name="label_loginPleaseTryAgainMessage">Please try again</string>
    <string name="label_loginUsernameAlreadyExists">Already a user with that username.  Please choose a new username</string>
    <string name="label_loginEmailAlreadyExists">Already a user with that email address.  Please choose a new email</string>
    <string name="label_selectOption">What would you like to do?</string>
    <string name="title_activity_start">Start</string>
    <string name="action_settings">Settings</string>

    <!-- Main Menu Screen -->
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="label_playgame">Play</string>
    <string name="label_newgame">Create New Game</string>
    <string name="label_mygames">View Created Games</string>

    <!-- Game Creation Screen -->
    <string name="label_createGame">Create New Game</string>
    <string name="label_startDatetime">Start Date/Time:</string>
    <string name="hint_startDate">Start Date</string>
    <string name="hint_startTime">Start Time</string>
    <string name="hint_endDate">End Date</string>
    <string name="hint_endTime">End Time</string>
    <string name="label_endDatetime">End Date/Time:</string>
    <string name="label_gameName">Game Name:</string>
    <string name="label_gamePlayerList">Player List:</string>
    <string name="label_itemList">Item List:</string>
    <string name="hint_newGameName">Sample Game Name</string>
    <string name="button_create">Create</string>
    <string name="button_reset">Reset</string>
    <string name="label_create">Create</string>
    <string name="hint_addItem">Sample Item Name</string>
    <string name="button_addItem">Add Item</string>

    <!-- View Game Screen -->
    <string name="title_viewGame">View Game</string>
    <string name="button_joinGame">Join</string>
    <string name="button_back">Back</string>
    <string name="button_edit">Edit Game</string>
    <string name="label_currentGamePlayers">Current Players</string>

    <!-- Edit Game Screen -->
    <string name="button_save">Save</string>
    <string name="title_activity_edit_game">Edit Game</string>

    <!-- Invited Games Screen -->
    <string name="title_activity_invited_game">Play Scavenger Hunt</string>
    <string name="invited_games_instructions">You\'re a player in the following games. Click to Play!</string>
    <string name="title_activity_game_hub">Game Hub</string>

    <!-- Found Item Dialog -->
    <string name="dialog_found">Yes, I found it!</string>
    <string name="dialog_cancel">Cancel</string>
    
    <!-- Already Won Dialog -->
    <string name="alreadyWon">Sorry, but this game is finsihed. Another player has already won.</string>
</resources>