<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_createGame"
    style="?android:attr/buttonBarStyle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp" >

    <TextView
        android:id="@+id/label_gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gameName"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edit_gameName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_gameName"
        android:hint="@string/hint_newGameName"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_startDatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_gameName"
        android:text="@string/label_startDatetime"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editEndDate"
        android:layout_below="@+id/label_startDatetime"
        android:hint="@string/hint_startDate"
        android:inputType="date"
        android:onClick="showStartDatePickerDialog" />

    <TextView
        android:id="@+id/label_endDatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editStartDate"
        android:text="@string/label_endDatetime"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_endDatetime"
        android:layout_toLeftOf="@+id/editEndTime"
        android:hint="@string/hint_endDate"
        android:inputType="date"
        android:onClick="showEndDatePickerDialog" />

    <TextView
        android:id="@+id/label_itemList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEndDate"
        android:text="@string/label_itemList"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_editAddItem"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_itemList"
        android:drawableRight="@drawable/ic_new"
        android:text="@string/button_addItem" >

    </Button>

    <ListView
        android:id="@+id/listview_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view1"
        android:layout_alignRight="@+id/editEndDate"
        android:layout_below="@+id/button_editAddItem" >
    </ListView>
    
    <Button
        android:id="@+id/button_update"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_save" />

    <ListView
        android:id="@+id/listview_players"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/button_update"
        android:layout_alignTop="@+id/button_editAddItem"
        android:layout_toRightOf="@+id/editEndDate" >

    </ListView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignBottom="@+id/listview_items"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray" />

    <View
        android:id="@+id/view1"
        android:layout_width="0.5dp"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/button_update"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white" />

    <EditText
        android:id="@+id/editStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_below="@+id/label_startDatetime"
        android:ems="10"
        android:hint="@string/hint_startTime"
        android:inputType="time"
        android:onClick="showStartTimePickerDialog" />

    <EditText
        android:id="@+id/editEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editStartTime"
        android:layout_below="@+id/label_endDatetime"
        android:ems="10"
        android:hint="@string/hint_endTime"
        android:inputType="date"
        android:onClick="showEndTimePickerDialog" />

    <TextView
        android:id="@+id/label_gamePlayerList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEndTime"
        android:layout_toRightOf="@+id/view1"
        android:text="@string/label_gamePlayerList"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

</RelativeLayout>