<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/label_selectOption"
        android:textSize="18.0sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mainMenuButton_playGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/label_playgame"
        android:textSize="16sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/mainMenuButton_newGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/label_newgame"
        android:textSize="16sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/mainMenuButton_myGames"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/label_mygames"
        android:textSize="16sp"
        android:textStyle="normal" />

</LinearLayout>