<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarStyle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/label_enterUsernamePasswordEmail"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/textbox_loginUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:visibility="visible" />

    <EditText
        android:id="@+id/textbox_loginPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:visibility="visible" />

    <EditText
        android:id="@+id/textbox_loginEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/hint_email"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/loginbutton_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/label_continue"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/loginbutton_cancel"
            android:style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/label_cancel"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>