<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SplashLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    
    <ImageView
        android:id="@+id/splash_image_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/splash_logo" />

    <TextView
        android:id="@+id/splash_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dip"
        android:layout_marginRight="10dip"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/hello"
        android:textSize="18.0sp" />

    <TextView
        android:id="@+id/splash_appver_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="10dip"
        android:layout_marginRight="10dip"
        android:gravity="right"
        android:padding="10dip"
        android:text="@string/app_version"
        android:textSize="10.0sp" />

</LinearLayout>